--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -22,5 +22,6 @@
   "LANDeviceName": "",
   "LANScanPort": 5299,
   "LANTransmissionPort": 52099,
-  "StatisticsCard": true
+  "StatisticsCard": true,
+  "EditAutoSave": 30
 }
