🆕 feat: Check for updates at startup

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -26,5 +26,6 @@
   "EditAutoSave": 30,
   "DiarySort": "",
   "TagSort": "",
-  "LocationSort": ""
+  "LocationSort": "",
+  "UpdateNotPrompt": false
 }
