🆕 feat: add ImageWaterfall

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/open-source-project/open-source-project.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/open-source-project/open-source-project.json
@@ -95,6 +95,11 @@
     "Url": "https://github.com/skazantsev/WebDavClient/blob/main/LICENSE.txt"
   },
   {
+    "Name": "wc-waterfall",
+    "License": "MIT license",
+    "Url": "https://github.com/huodoushigemi/wc-flow-layout/blob/main/LICENSE"
+  },
+  {
     "Name": "Vditor",
     "License": "MIT license",
     "Url": "https://github.com/Vanessa219/vditor/blob/master/LICENSE"
