--- a/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
+++ b/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Serilog" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
+		<PackageReference Include="TagLibSharp" Version="2.3.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\SwashbucklerDiary.Shared\SwashbucklerDiary.Shared.csproj" />
