♻️ refactor(Setting): change default value of DiaryCardIcon

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -14,7 +14,7 @@
   "WebDavConfig": "",
   "WelcomeText": false,
   "IndexDate": false,
-  "DiaryCardIcon": false,
+  "DiaryCardIcon": true,
   "AlertTimeout": 3000,
   "WebDAVCopyResources": false,
   "DiaryCardDateFormat": "MM/dd",
