Android transparent status bar and navigation bar

--- a/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
+++ b/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
@@ -134,6 +134,11 @@
 		<IPhoneResourcePrefix>Platforms/MacCatalyst/Resources</IPhoneResourcePrefix>
 	</PropertyGroup>
 
+	<ItemGroup  Condition="$(TargetFramework.StartsWith('net8.0-android')) != true AND $(TargetFramework.StartsWith('net8.0-ios')) != true">
+	  <Content Remove="wwwroot\css\status-bar-and-navigation-bar.css" />
+	  <None Include="wwwroot\css\status-bar-and-navigation-bar.css" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
