--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -5,9 +5,13 @@
   "UserName": "",
   "Sign": "",
   "Avatar": "_content/SwashbucklerDiary.Rcl/logo/logo.svg",
-  "PrivacyMode": true,
-  "PrivatePassword": "",
-  "BackupsPath": "",
+  "PrivacyMode": false,
+  "HidePrivacyModeEntrance": false,
+  "PrivacyModeEntrancePassword": "",
+  "PrivacyModeSearchKey": "",
+  "PrivacyModeDark": true,
+  "SetPrivacyDiary": true,
+  "AllowEnterPrivacyMode": false,
   "Theme": 0,
   "FirstSetLanguage": false,
   "FirstAgree": false,
