--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -4,7 +4,7 @@
   "Markdown": true,
   "UserName": "",
   "Sign": "",
-  "Avatar": "_content/SwashbucklerDiary.Rcl/logo/logo.svg",
+  "Avatar": "_content/SwashbucklerDiary.Rcl/logo/logo.jpg",
   "PrivacyMode": false,
   "HidePrivacyModeEntrance": false,
   "PrivacyModeEntrancePassword": "",
