🆕 feat: Add image lazy loading settings

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-functions/app-functions.json
@@ -150,6 +150,12 @@
     "Href": "diarySetting"
   },
   {
+    "Name": "Setting.Display.Diary.ImageLazy.Name",
+    "Icon": "mdi-image-refresh-outline",
+    "Path": "Setting.Display.Diary.ImageLazy.Path",
+    "Href": "diarySetting"
+  },
+  {
     "Name": "Location.Name",
     "Icon": "mdi-map-marker-outline",
     "Path": "Location.Path",
