--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -31,5 +31,6 @@
   "DiarySort": "",
   "TagSort": "",
   "LocationSort": "",
-  "UpdateNotPrompt": false
+  "UpdateNotPrompt": false,
+  "ImageLazy": true
 }
